@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-06-29T01:18:57Z",
+  "timestamp" : "2024-06-30T01:26:32Z",
   "count_outdated" : 790,
   "uniques_outdated" : 400,
-  "count" : 796,
-  "uniques" : 406,
+  "count" : 797,
+  "uniques" : 407,
   "clones" : [
     {
       "timestamp": "2024-06-17T00:00:00Z",
@@ -43,6 +43,15 @@
     },
     {
       "timestamp": "2024-06-27T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-06-29T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
